# tivra

./: .gitignore  Cargo.toml  README.md
crates/common/: Cargo.toml
crates/common/src/: config.rs  lib.rs  telemetry.rs
crates/tivra/: Cargo.toml
crates/tivra-gui/: Cargo.toml
crates/tivra-gui/i18n/en/: tivra_gui.ftl
crates/tivra-gui/i18n/hi/: tivra_gui.ftl
crates/tivra-gui/src/: config.rs  localize.rs  main.rs
crates/tivra-gui/src/app/: app_state.rs  constants.rs  handle_global_messages.rs  message.rs  mod.rs  run.rs  subscriptions.rs
crates/tivra-gui/src/app/components/: decorations.rs  mod.rs  sidebar.rs
crates/tivra-gui/src/app/styles/: button.rs  icons.rs  mod.rs  theme.rs
resources/logo/: logo.graphite
