[workspace]
resolver = "2"
members = ["crates/common","crates/tivra", "crates/tivra-gui"]

[workspace.dependencies]
tokio = { version = "1.48.0", features = ["full"] }
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
tracing = { version = "0.1.43" }
toml = { version = "0.9.8" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1 
panic = "abort"
strip = true
