[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-appender = "0.2.4"
directories = "6.0.0"
toml = "0.9.8"

[dev-dependencies]
tempfile = "3.24.0"
