[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-appender = { version = "0.2.4" }
directories = { version = "6.0.0" }

[dev-dependencies]
tempfile = {version = "3.24.0"}
