[package]
name = "tivra-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
iced = { version = "0.14.0", features = ["tokio", "image", "svg"] }
serde.workspace = true
toml.workspace = true
tokio.workspace = true
tracing.workspace = true

[features]
debug = ["iced/hot"]
