[package]
name = "tivra-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
iced = { version = "0.14.0", features = ["tokio", "image", "svg"] }
i18n-embed = { version = "0.16.0", features = ["fluent-system", "desktop-requester"] }
rust-embed = { version = "8.9.0" }
i18n-embed-fl = { version = "0.10.0" }
serde.workspace = true
toml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
debug = ["iced/hot"]
